WC: Fixed single product variation alignment

--- a/sass/woocommerce/_single.scss
+++ b/sass/woocommerce/_single.scss
@@ -162,7 +162,7 @@
 					border: none;
 
 					td {
-						padding-bottom: 15px;
+						padding: 7.5px 0;
 					}
 
 					&:only-of-type td {
